--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,9 @@ default_envs = black_f407zg
 monitor_speed = 115200
 build_flags =
     -D BAUD_RATE=${env.monitor_speed}
+    -D HSE_VALUE=12000000
+    -D PIO_FRAMEWORK_ARDUINO_SERIAL_WITHOUT_GENERIC
+    -D ENABLE_HWSERIAL6
 
 
 [env:black_f407zg]
