Serial on BOOT header

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,8 @@ build_flags =
     -D BAUD_RATE=${env.monitor_speed}
     -D HSE_VALUE=12000000
     -D PIO_FRAMEWORK_ARDUINO_SERIAL_WITHOUT_GENERIC
-    -D ENABLE_HWSERIAL6
+    -D ENABLE_HWSERIAL3 ; Serial on BOOT header
+    -D ENABLE_HWSERIAL6 ; Serial on UEXT connector
 
 
 [env:black_f407zg]
