--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,14 @@ monitor_speed = 115200
 build_flags =
     -D BAUD_RATE=${env.monitor_speed}
     -D HSE_VALUE=12000000
-    -D PIO_FRAMEWORK_ARDUINO_SERIAL_WITHOUT_GENERIC
     -D ENABLE_HWSERIAL3 ; Serial on BOOT header
     -D ENABLE_HWSERIAL6 ; Serial on UEXT connector
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC ; Serial USB (USB CDC)
+	-D USBCON
+	-D USBD_VID=0x0483
+	-D USB_MANUFACTURER="Unknown"
+	-D USB_PRODUCT="\"Unknown_product\""
+	-D HAL_PCD_MODULE_ENABLED
 
 
 [env:black_f407zg]
