Split SystemClock_Config in .c and .h

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,8 +26,8 @@ build_flags =
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC ; Serial USB (USB CDC)
 	-D USBCON
 	-D USBD_VID=0x0483
-	-D USB_MANUFACTURER="Unknown"
-	-D USB_PRODUCT="\"Unknown_product\""
+	-D USB_MANUFACTURER="OLIMEX"
+	-D USB_PRODUCT="\"STM32_E-407_board\""
 	-D HAL_PCD_MODULE_ENABLED
 
 
