--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-
+;;;
+;
+; S T M 3 2 - E 4 0 7    B L I N K
+;
+; Copyright (C) 2019  Nicolas Jeanmonod, ouilogique.com
+;
+; https://github.com/NicHub/STM32-E407-BLINK
 ; https://docs.platformio.org/en/latest/boards/ststm32/black_f407zg.html
+; https://github.com/platformio/platform-ststm32/issues/295
+;
+;;
+
 
 [platformio]
-default_envs = black_f407zg
+; default_envs = black_f407zg_upload_Olimex_ARM-USB-OCD-H
+default_envs = black_f407zg_upload_usb
 
 
 [env]
@@ -31,7 +42,35 @@ build_flags =
 	-D HAL_PCD_MODULE_ENABLED
 
 
-[env:black_f407zg]
+; [openocd]
+; flags =
+;     -s
+;     $PROJECT_PACKAGES_DIR/tool-openocd/scripts
+;     -f
+;     interface/ftdi/olimex-arm-usb-ocd-h.cfg
+;     -f
+;     target/stm32f4x.cfg
+
+
+; [env:black_f407zg_upload_Olimex_ARM-USB-OCD-H]
+; platform = ststm32
+; board = black_f407zg
+; framework = arduino
+; build_flags = ${env.build_flags}
+
+; debug_tool = custom
+; upload_flags =
+;     ${openocd.flags}
+;     -c
+;     program {$SOURCE} verify reset; shutdown;
+; upload_command = ~/.platformio/packages/tool-openocd/bin/openocd $UPLOAD_FLAGS
+
+; debug_server =
+;     $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
+;     ${openocd.flags}
+
+
+[env:black_f407zg_upload_usb]
 platform = ststm32
 board = black_f407zg
 framework = arduino
